<resources>
    <string name="app_name">DealerWerx</string>
    <string name="placeholder">Placeholder</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="filler_or">OR</string>
    <string name="copyright">© Dealerwerx 2016 All Rights Reserved</string>
    <string name="action_register">Register</string>
    <string name="action_go_back">Go Back</string>
    <string name="terms_of_service_accept">I Accept the <a href="deanmyers.project.dealerwerx.TermsOfService://show">Privacy Policy</a></string>
    <string name="enter_your_vin_number">Enter your VIN number</string>
    <string name="listing_information">Listing Information</string>
    <string name="prompt_year">Year</string>
    <string name="vehicle_information">Vehicle Information</string>
    <string name="prompt_make">Make</string>
    <string name="drive_train">Drive Train</string>
    <string name="tranmission">Tranmission</string>
    <string name="number_of_seats">Number of Seats</string>
    <string name="kilometers">Kilometers</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="prompt_engine">Engine</string>
    <string name="body_style">Body Style</string>
    <string name="trim">Trim</string>
    <string name="exterior_color">Exterior Color</string>
    <string name="interior_color">Interior Color</string>
    <string name="prompt_model">Model</string>
    <string name="color">Color</string>
    <string name="scavenger">Scavenger Hunt</string>
    <string name="videos">Videos</string>
    <string name="safezone">SafeZone</string>
    <string name="garage">My Garage</string>
    <string name="near_me">Near Me</string>
    <string name="liked">Liked</string>
    <string name="browse">Browse</string>
    <string name="my_beacons">My Beacons</string>
    <string name="maps">Maps</string>
    <string name="search">Search</string>
    <string name="check_in">Check In</string>
</resources>