<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_browse"
            android:title="@string/browse" />
        <item
            android:id="@+id/nav_maps"
            android:title="@string/maps"/>
        <item
            android:id="@+id/nav_nearme"
            android:title="@string/near_me" />
        <item
            android:id="@+id/nav_lookingfor"
            android:title="Looking To Buy" />
        <item
            android:id="@+id/nav_search"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_garage"
            android:title="@string/garage" />
        <item
            android:id="@+id/nav_mybeacons"
            android:title="@string/my_beacons"/>
        <item
            android:id="@+id/nav_liked"
            android:title="@string/liked" />
        <item
            android:id="@+id/nav_safezone"
            android:title="@string/safezone" />
        <item
            android:id="@+id/nav_scavenger"
            android:title="@string/scavenger" />
        <item
            android:id="@+id/nav_videos"
            android:title="@string/videos" />
        <item
            android:id="@+id/nav_checkin"
            android:title="@string/check_in" />
        <item
            android:id="@+id/nav_settings"
            android:title="Settings" />
    </group>
</menu>
