<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/content_addimages"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listing_information"
        android:textSize="17sp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />
    <include layout="@layout/content_listingfields"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vehicle_information"
        android:textSize="17sp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_year"
            android:inputType="number"
            android:maxLength="4"
            android:maxLines="1"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/make"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_make"
            android:inputType="text|textCapWords"
            android:maxLines="1"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_model"
            android:inputType="text|textCapWords"
            android:maxLines="1"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/color"
            android:inputType="text|textCapWords"
            android:maxLines="1"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/trim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trim"
            android:inputType="text|textCapWords"
            android:maxLines="1"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/bodystyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/body_style"
            android:inputType="text|textCapWords"
            android:maxLines="1"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/engine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_engine"
            android:inputType="text|textCapWords"
            android:maxLines="1"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/fueltype"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/fuel_type"
            android:inputType="text|textCapWords"
            android:maxLines="1"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/kilometers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kilometers"
            android:inputType="number"
            android:maxLines="1"
            android:imeOptions="actionDone"
            />
    </android.support.design.widget.TextInputLayout>
    <include layout="@layout/content_submitbutton"/>
</LinearLayout>