<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/content_addimages"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listing_information"
        android:textSize="17sp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />
    <include layout="@layout/content_listingfields"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vehicle_information"
        android:textSize="17sp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_year"
            android:inputType="number"
            android:maxLength="4"
            android:maxLines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/make"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_make"
            android:inputType="text|textCapWords"
            android:maxLines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_model"
            android:inputType="text|textCapWords"
            android:maxLines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/interior_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/interior_color"
            android:inputType="text|textCapWords"
            android:maxLines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/exterior_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/exterior_color"
            android:inputType="text|textCapWords"
            android:maxLines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/trim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trim"
            android:inputType="text|textCapWords"
            android:maxLines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bodystyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/body_style"
            android:inputType="text|textCapWords"
            android:maxLines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/engine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_engine"
            android:inputType="text|textCapWords"
            android:maxLines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/fueltype"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/fuel_type"
            android:inputType="text|textCapWords"
            android:maxLines="1"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/kilometers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kilometers"
            android:inputType="number"
            android:maxLines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/doors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Number of Doors"
            android:inputType="number"
            android:maxLines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/seats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_of_seats"
            android:inputType="number"
            android:maxLines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/transmission"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/tranmission"
            android:inputType="text|textCapWords"
            android:maxLines="1"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/drivetrain"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/drive_train"
            android:inputType="text|textCapWords"
            android:maxLines="1"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/vin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_vin_number"
        android:inputType="textNoSuggestions|textCapCharacters"
        android:maxLines="1"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
        android:maxLength="17"
        android:singleLine="true"
        android:layout_marginBottom="20dp"
        android:imeOptions="actionDone"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <include layout="@layout/content_submitbutton"/>
</LinearLayout>